# dj-requests-app

./: .env.example  .gitignore  README.md  behave.ini  pyproject.toml
.devcontainer/: devcontainer.json
docs/: ARCHITECTURE.md  REQUIREMENTS.md
notebooks/: spotify_exploration.ipynb
scripts/: spotify_auth.py
src/spotify/: client.py
tests/bdd/features/spotify/: playlist_management.feature  search_tracks.feature  spotify_e2e.feature
tests/bdd/fixtures/spotify/: playlist_tracks_valid.json  playlists_valid.json  search_multi_artist.json  search_no_artwork.json  search_valid.json
tests/bdd/steps/: common_steps.py  playlist_management_steps.py  search_tracks_steps.py  spotify_e2e_steps.py  spotify_shared_steps.py
