[project]
name = "dj-requests-app"
version = "0.1.0"
description = "A web app for audience members to submit DJ song requests via Spotify."
authors = [
    { name = "Barry Smart", email = "barry.j.a.smart@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "python-dotenv",
    "polars[pyarrow]",
    "ipykernel",
]

[tool.hatch.build.targets.wheel]
packages = ["src/spotify"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "behave>=1.2.6",
    "duckdb",
    "pytest>=9.0.3",
]
